<resources>
    <!--  system  -->
    <string name="null_string"></string>
    <string name="alarm_bundle">AlarmBundle</string>
    <string name="alarm_action">RAlarm.START</string>
    <string name="mAlarmData">MAlarm</string>
    <string name="saveActionListener">SaveActionListener</string>
    <string name="mAlarmCount">MAlarmCount</string>

    <!--  main  -->
    <string name="app_name">MoCa</string>

    <!--  tabs  -->
    <string name="tab_alarm">알람</string>
    <string name="tab_globalclock">세계시간</string>
    <string name="tab_stopwatch">스톱워치</string>

    <!--  common  -->
    <string name="common_ok">확인</string>
    <string name="common_cancel">취소</string>
    <string name="common_save">저장</string>
    <string name="common_off">종료</string>

    <!--  alarm_list  -->
    <!--   alarm_list_item     -->
    <string name="alarm_list_item_default_time">오전 10:00</string>
    <string name="alarm_list_item_default_day">2020/10/10</string>
    <string name="alarm_list_item_default_dayofweek">(Wen)</string>
    <string name="alarm_list_item_default_name">알람 이름</string>
    <string name="alarm_list_item_create">새 알람</string>

    <!--  alarm_setting  -->
    <string name="alarm_setting_day_pattern">yyyy/MM/dd (EEE)</string>

    <!--  alarm_setting_weekdays  -->
    <string name="weekday_sun">일</string>
    <string name="weekday_mon">월</string>
    <string name="weekday_tus">화</string>
    <string name="weekday_wen">수</string>
    <string name="weekday_thu">목</string>
    <string name="weekday_fri">금</string>
    <string name="weekday_sat">토</string>

    <!--  alarm_setting_name  -->
    <string name="alarm_setting_name_hint">알람 이름</string>

    <!--  alarm_setting_holidayoff  -->
    <string name="alarm_setting_holidayoff_title">공휴일 알람 끄기</string>

    <!--  alarm_setting_re_alarm  -->
    <string name="alarm_setting_realarm_title">다시 울림</string>
    <string name="alarm_setting_realarm_default_interval">5</string>
    <string name="alarm_setting_realarm_intervalunit">분후 </string>
    <string name="alarm_setting_re_alarm_default_count">3</string>
    <string name="alarm_setting_realarm_count_unit">회</string>

    <!--  alarm_mode  -->
    <string name="alarm_setting_mode_title">알람 모드</string>

    <!--  alarm_power  -->
    <string name="alarm_setting_power_title">알람 세기</string>

    <!--  alarm_setting_ringtone  -->
    <string name="alarm_setting_ringtone_title">알림음</string>
    <string name="alarm_setting_ringtone_slectiondialog">알람음 설정</string>

    <!--  alarm_setting_vibration  -->
    <string name="alarm_setting_vibration_title">진동</string>
    <string name="alarm_setting_vibration_pattern">진동 패턴 선택</string>
    <string name="alarm_setting_vibration_pattern1_name">진동 패턴 1</string>
    <string name="alarm_setting_vibration_pattern2_name">진동 패턴 2</string>

    <!--  alarm_setting_flash  -->
    <string name="alarm_setting_flash_title">플래시</string>

    <!--  alarm_setting_screen  -->
    <string name="alarm_setting_screen_title">화면 깜빡임</string>

    <!-- alarmcallback  -->
    <string name="alarmcallback_off">Alarm Off</string>
    <string name="alarmcallback_snooze">Snooze</string>

    <!--  permission util  -->
    <string name="overlayPermissionDialogTitle">알람을 앱 위에 띄우기 위해 권한이 필요합니다.</string>
    <string name="overlayPermissionDialogMessage">다음 목록에서 MoCa를 선택하여 권한을 부여해 주세요.</string>

    <!--  Mode  -->
    <string name="user_defined_mode">사용자 설정 모드</string>

    <!--  Dashboard  -->
    <string name="no_alarm">알람이 없습니다</string>
    <string name="hour">시간</string>
    <string name="minute">분</string>
    <string name="later">후</string>

    <!--  alarm delete dialog  -->
    <string name="delete_alarm_dialog_title">알람 삭제</string>
    <string name="delete_alarm_dialog_content">알람을 삭제하시겠습니까?</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>