<com.onandon.moca.view.customView.VDayOfWeekButtonGroup android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.onandon.moca.view.customView.OIndexToggleButton
        android:id="@+id/alarm_setting_weekdays_0"
        android:layout_marginRight="20dp"
        style="@style/OSToggleButton_Week"
        android:text="@string/weekday_sun"/>

    <com.onandon.moca.view.customView.OIndexToggleButton
        android:id="@+id/alarm_setting_weekdays_1"
        android:layout_marginRight="20dp"
        style="@style/OSToggleButton_Week"
        android:text="@string/weekday_mon"/>

    <com.onandon.moca.view.customView.OIndexToggleButton
        android:id="@+id/alarm_setting_weekdays_2"
        android:layout_marginRight="20dp"
        style="@style/OSToggleButton_Week"
        android:text="@string/weekday_tus"/>

    <com.onandon.moca.view.customView.OIndexToggleButton
        android:id="@+id/alarm_setting_weekdays_3"
        android:layout_marginRight="20dp"
        style="@style/OSToggleButton_Week"
        android:text="@string/weekday_wen"/>

    <com.onandon.moca.view.customView.OIndexToggleButton
        android:id="@+id/alarm_setting_weekdays_4"
        android:layout_marginRight="20dp"
        style="@style/OSToggleButton_Week"
        android:text="@string/weekday_thu"/>

    <com.onandon.moca.view.customView.OIndexToggleButton
        android:id="@+id/alarm_setting_weekdays_5"
        android:layout_marginRight="20dp"
        style="@style/OSToggleButton_Week"
        android:text="@string/weekday_fri"/>

    <com.onandon.moca.view.customView.OIndexToggleButton
        android:id="@+id/alarm_setting_weekdays_6"
        style="@style/OSToggleButton_Week"
        android:text="@string/weekday_sat"/>


</com.onandon.moca.view.customView.VDayOfWeekButtonGroup>