<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:background="@null"
        android:id="@+id/alarm_setting_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:hint="@string/alarm_setting_name_hint"
        android:inputType="text"
        android:paddingVertical="5dp"
        android:layout_marginHorizontal="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/alarm_setting_time_setting_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="?colorSurface"
        android:paddingHorizontal="35dp"
        android:paddingVertical="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarm_setting_name">

        <TimePicker
            android:id="@+id/alarm_setting_time"
            android:layout_width="312dp"
            android:layout_height="163dp"
            android:scaleX="0.90"
            android:scaleY="0.90"
            android:theme="@style/STimePicker_Alarm"
            android:timePickerMode="spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/alarm_setting_day"
            layout="@layout/alarm_setting_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alarm_setting_time" />

        <include
            android:id="@+id/alarm_setting_weekday"
            layout="@layout/alarm_setting_weekdays"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alarm_setting_day" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            app:layout_constraintBottom_toTopOf="@+id/alarm_setting_holiday"
            app:layout_constraintTop_toBottomOf="@+id/alarm_setting_weekday"
            tools:layout_editor_absoluteX="35dp" />

        <com.onandon.moca.onAndOn.compoundView.OTitleInfoSwitchView
            android:id="@+id/alarm_setting_holiday"
            style="@style/SAlarmSettingItem"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:alarm_setting_item_title="@string/alarm_setting_holidayoff_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alarm_setting_weekday" />

        <com.onandon.moca.onAndOn.compoundView.OTitleInfoSwitchView
            android:id="@+id/alarm_setting_realarm"
            style="@style/SAlarmSettingItem"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="2dp"
            app:alarm_setting_item_info="@layout/alarm_setting_item_setting_layout_realarm"
            app:alarm_setting_item_title="@string/alarm_setting_realarm_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alarm_setting_holiday"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_gravity="center_horizontal"
        android:background="?colorSurface"
        android:paddingHorizontal="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarm_setting_time_setting_layout">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="9dp"
            android:background="@color/light_gray"
            app:layout_constraintBottom_toTopOf="@+id/alarm_setting_power"
            tools:layout_editor_absoluteX="35dp" />

        <com.onandon.moca.onAndOn.compoundView.OTitleInfoSwitchView
            android:id="@+id/alarm_setting_power"
            style="@style/SAlarmSettingItem"
            android:layout_marginTop="10dp"
            app:alarm_setting_item_info="@layout/alarm_setting_item_setting_layout_1textview"
            app:alarm_setting_item_title="@string/alarm_setting_power_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.onandon.moca.onAndOn.compoundView.OTitleInfoSwitchView
            android:id="@+id/alarm_setting_ringtone"
            style="@style/SAlarmSettingItem"
            android:layout_marginTop="10dp"
            app:alarm_setting_item_info="@layout/alarm_setting_item_setting_layout_1textview"
            app:alarm_setting_item_title="@string/alarm_setting_ringtone_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alarm_setting_power" />

        <com.onandon.moca.onAndOn.compoundView.OTitleInfoSwitchView
            android:id="@+id/alarm_setting_vibration"
            style="@style/SAlarmSettingItem"
            app:alarm_setting_item_info="@layout/alarm_setting_item_setting_layout_1textview"
            app:alarm_setting_item_title="@string/alarm_setting_vibration_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alarm_setting_ringtone" />

        <com.onandon.moca.onAndOn.compoundView.OTitleInfoSwitchView
            android:id="@+id/alarm_setting_flash"
            style="@style/SAlarmSettingItem"
            app:alarm_setting_item_title="@string/alarm_setting_flash_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alarm_setting_vibration" />

        <com.onandon.moca.onAndOn.compoundView.OTitleInfoSwitchView
            android:id="@+id/alarm_setting_screen"
            style="@style/SAlarmSettingItem"
            android:layout_marginBottom="10dp"
            app:alarm_setting_item_title="@string/alarm_setting_screen_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alarm_setting_flash" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.onandon.moca.onAndOn.oButton.oActionButton.OVectorAnimationActionButton
            android:id="@+id/alarm_setting_cancel"
            style="@style/OSActionButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/common_cancel" />

        <com.onandon.moca.onAndOn.oButton.oActionButton.OVectorAnimationActionButton
            android:id="@+id/alarm_setting_save"
            style="@style/OSActionButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/common_save" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>