<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    style="@style/OSPrimarySurface"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="160dp"
    >

    <TextView
        android:id="@+id/alarm_list_dashboard_time"

        style="@style/OSTextView"
        android:textSize="45dp"
        android:gravity="center"

        android:text="@string/alarm_list_item_default_time"
        android:autoSizeTextType="uniform"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarm_list_dashboard_name"
        />

    <TextView
        android:id="@+id/alarm_list_dashboard_name"

        style="@style/OSTextView"
        android:textSize="20sp"

        android:text="@string/alarm_list_item_default_name"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginRight="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/alarm_list_dashboard_switch"
        app:layout_constraintTop_toBottomOf="@+id/alarm_list_dashboard_time"
        app:layout_constraintVertical_bias="0.273"
        >

        <TextView
            android:id="@+id/alarm_list_dashboard_date"

            style="@style/OSTextView"
            android:gravity="left|center_vertical"

            android:text="@string/alarm_list_item_default_day"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/alarm_list_dashboard_dayofweek"

            style="@style/OSTextView"
            android:gravity="left|center_vertical"

            android:singleLine="true"
            android:text="@string/alarm_list_item_default_dayofweek"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/alarm_list_dashboard_date"
            app:layout_constraintTop_toTopOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.onandon.moca.onAndOn.oButton.oToggleButton.OVectorAnimationToggleButton
        android:id="@+id/alarm_list_dashboard_switch"

        style="@style/OSCheckToggleButton"

        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarm_list_dashboard_time"
        app:layout_constraintVertical_bias="0.273" />

</androidx.constraintlayout.widget.ConstraintLayout>
