<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/alarm_list_next_alarm"
    android:layout_width="match_parent"
    android:layout_marginTop="2dp"
    android:paddingHorizontal="35dp"
    android:layout_height="wrap_content"
    android:background="@drawable/inner_shadow_rectangle"
    android:minHeight="160dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/alarm_list_next_alarm_time"
        style="@style/STextView_Main"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/alarm_list_item_default_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/alarm_list_next_alarm_name"
        style="@style/STextView_Main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:text="@string/alarm_list_item_default_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/alarm_list_item_on"
        app:layout_constraintTop_toBottomOf="@+id/alarm_list_next_alarm_time"
        app:layout_constraintVertical_bias="0.273">


        <TextView
            android:id="@+id/alarm_list_next_alarm_date"
            style="@style/STextView_Main"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.7"
            android:gravity="left|center_vertical"
            android:text="@string/alarm_list_item_default_day"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/alarm_list_next_alarm_dayofweek"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            style="@style/STextView_Main"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="5dp"
            android:singleLine="true"
            android:text="@string/alarm_list_item_default_dayofweek"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/alarm_list_next_alarm_date"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.onandon.moca.onAndOn.oButton.oToggleButton.OVectorAnimationToggleButton
        android:id="@+id/alarm_list_item_on"
        style="@style/OSToggleButton_Check"
        android:layout_gravity="center"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.766" />

</androidx.constraintlayout.widget.ConstraintLayout>
